25/38 passed (7 hash-table cases are not implemented yet)
- 3 doubly-linked-list-less-function related issues
- 3 unknown issues on bitmap

--- a/proj0-2/Makefile
+++ b/proj0-2/Makefile
@@ -5,19 +5,19 @@ TARGET=testlib
 
 all: $(TARGET)
 
-hex_dump.o: hex_dump.c hex_dump.h
+hex_dump.o: hex_dump.c hex_dump.h round.h
 	$(CC) -c hex_dump.c $(CFLAGS)
 
 list.o: list.c list.h
 	$(CC) -c list.c $(CFLAGS)
 
-hash.o: hash.c hash.h
+hash.o: hash.c hash.h list.h
 	$(CC) -c hash.c $(CFLAGS)
 
-bitmap.o: bitmap.c bitmap.h limits.h round.h hex_dump.h
+bitmap.o: bitmap.c bitmap.h limits.h round.h
 	$(CC) -c bitmap.c $(CFLAGS)
 
-testlib.o: testlib.c testlib.h list.h hash.h bitmap.h
+testlib.o: testlib.c testlib.h list.h hash.h bitmap.h hex_dump.h
 	$(CC) -c testlib.c $(CFLAGS)
 
 $(TARGET): $(OBJECTS)
